// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-device-viewer> Component basic usage 1`] = `
<bolt-device-viewer class="c-bolt-iphone8-viewer c-bolt-device-viewer marvel-device c-bolt-iphone8-viewer--portrait">
  <div class="c-bolt-device-viewer__inner c-bolt-iphone8-viewer__inner">
    <div class="c-bolt-iphone8-viewer__top-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__bottom-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__sensor">
    </div>
    <div class="c-bolt-iphone8-viewer__sleep">
    </div>
    <div class="c-bolt-iphone8-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-iphone8-viewer__camera">
    </div>
    <div class="c-bolt-iphone8-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-iphone8-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-iphone8-viewer__screen">
      <img class="e-bolt-image"
           src="/fixtures/device-screenshot--phone.jpg"
           alt="alt text"
      >
    </div>
  </div>
</bolt-device-viewer>
`;

exports[`<bolt-device-viewer> Component decvice-viewer display: ipad 1`] = `
<bolt-device-viewer class="c-bolt-ipad-viewer c-bolt-device-viewer marvel-device c-bolt-ipad-viewer--black c-bolt-ipad-viewer--portrait">
  <div class="c-bolt-device-viewer__inner c-bolt-ipad-viewer__inner">
    <div class="c-bolt-ipad-viewer__top-bar">
    </div>
    <div class="c-bolt-ipad-viewer__bottom-bar">
    </div>
    <div class="c-bolt-ipad-viewer__sensor">
    </div>
    <div class="c-bolt-ipad-viewer__sleep">
    </div>
    <div class="c-bolt-ipad-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-ipad-viewer__camera">
    </div>
    <div class="c-bolt-ipad-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-ipad-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-ipad-viewer__screen">
    </div>
  </div>
</bolt-device-viewer>
`;

exports[`<bolt-device-viewer> Component decvice-viewer display: iphone8 1`] = `
<bolt-device-viewer class="c-bolt-iphone8-viewer c-bolt-device-viewer marvel-device c-bolt-iphone8-viewer--black c-bolt-iphone8-viewer--portrait">
  <div class="c-bolt-device-viewer__inner c-bolt-iphone8-viewer__inner">
    <div class="c-bolt-iphone8-viewer__top-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__bottom-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__sensor">
    </div>
    <div class="c-bolt-iphone8-viewer__sleep">
    </div>
    <div class="c-bolt-iphone8-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-iphone8-viewer__camera">
    </div>
    <div class="c-bolt-iphone8-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-iphone8-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-iphone8-viewer__screen">
    </div>
  </div>
</bolt-device-viewer>
`;

exports[`<bolt-device-viewer> Component decvice-viewer display: macbook 1`] = `
<bolt-device-viewer class="c-bolt-macbook-viewer c-bolt-device-viewer marvel-device c-bolt-macbook-viewer--black c-bolt-macbook-viewer--portrait">
  <div class="c-bolt-device-viewer__inner c-bolt-macbook-viewer__inner">
    <div class="c-bolt-macbook-viewer__top-bar">
    </div>
    <div class="c-bolt-macbook-viewer__bottom-bar">
    </div>
    <div class="c-bolt-macbook-viewer__sensor">
    </div>
    <div class="c-bolt-macbook-viewer__sleep">
    </div>
    <div class="c-bolt-macbook-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-macbook-viewer__camera">
    </div>
    <div class="c-bolt-macbook-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-macbook-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-macbook-viewer__screen">
    </div>
  </div>
</bolt-device-viewer>
`;

exports[`<bolt-device-viewer> Component device-viewer display: black 1`] = `
<bolt-device-viewer class="c-bolt-iphone8-viewer c-bolt-device-viewer marvel-device c-bolt-iphone8-viewer--black c-bolt-iphone8-viewer--portrait">
  <div class="c-bolt-device-viewer__inner c-bolt-iphone8-viewer__inner">
    <div class="c-bolt-iphone8-viewer__top-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__bottom-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__sensor">
    </div>
    <div class="c-bolt-iphone8-viewer__sleep">
    </div>
    <div class="c-bolt-iphone8-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-iphone8-viewer__camera">
    </div>
    <div class="c-bolt-iphone8-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-iphone8-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-iphone8-viewer__screen">
    </div>
  </div>
</bolt-device-viewer>
`;

exports[`<bolt-device-viewer> Component device-viewer display: gold 1`] = `
<bolt-device-viewer class="c-bolt-iphone8-viewer c-bolt-device-viewer marvel-device c-bolt-iphone8-viewer--gold c-bolt-iphone8-viewer--portrait">
  <div class="c-bolt-device-viewer__inner c-bolt-iphone8-viewer__inner">
    <div class="c-bolt-iphone8-viewer__top-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__bottom-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__sensor">
    </div>
    <div class="c-bolt-iphone8-viewer__sleep">
    </div>
    <div class="c-bolt-iphone8-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-iphone8-viewer__camera">
    </div>
    <div class="c-bolt-iphone8-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-iphone8-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-iphone8-viewer__screen">
    </div>
  </div>
</bolt-device-viewer>
`;

exports[`<bolt-device-viewer> Component device-viewer display: landscape 1`] = `
<bolt-device-viewer class="c-bolt-iphone8-viewer c-bolt-device-viewer marvel-device c-bolt-iphone8-viewer--black c-bolt-iphone8-viewer--landscape">
  <div class="c-bolt-device-viewer__inner c-bolt-iphone8-viewer__inner">
    <div class="c-bolt-iphone8-viewer__top-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__bottom-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__sensor">
    </div>
    <div class="c-bolt-iphone8-viewer__sleep">
    </div>
    <div class="c-bolt-iphone8-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-iphone8-viewer__camera">
    </div>
    <div class="c-bolt-iphone8-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-iphone8-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-iphone8-viewer__screen">
    </div>
  </div>
</bolt-device-viewer>
`;

exports[`<bolt-device-viewer> Component device-viewer display: portrait 1`] = `
<bolt-device-viewer class="c-bolt-iphone8-viewer c-bolt-device-viewer marvel-device c-bolt-iphone8-viewer--black c-bolt-iphone8-viewer--portrait">
  <div class="c-bolt-device-viewer__inner c-bolt-iphone8-viewer__inner">
    <div class="c-bolt-iphone8-viewer__top-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__bottom-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__sensor">
    </div>
    <div class="c-bolt-iphone8-viewer__sleep">
    </div>
    <div class="c-bolt-iphone8-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-iphone8-viewer__camera">
    </div>
    <div class="c-bolt-iphone8-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-iphone8-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-iphone8-viewer__screen">
    </div>
  </div>
</bolt-device-viewer>
`;

exports[`<bolt-device-viewer> Component device-viewer display: silver 1`] = `
<bolt-device-viewer class="c-bolt-iphone8-viewer c-bolt-device-viewer marvel-device c-bolt-iphone8-viewer--silver c-bolt-iphone8-viewer--portrait">
  <div class="c-bolt-device-viewer__inner c-bolt-iphone8-viewer__inner">
    <div class="c-bolt-iphone8-viewer__top-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__bottom-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__sensor">
    </div>
    <div class="c-bolt-iphone8-viewer__sleep">
    </div>
    <div class="c-bolt-iphone8-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-iphone8-viewer__camera">
    </div>
    <div class="c-bolt-iphone8-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-iphone8-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-iphone8-viewer__screen">
    </div>
  </div>
</bolt-device-viewer>
`;
